# bayarea_realestate

./: .env.example  .gitignore  .npmrc  CLAUDE.md  Makefile  generate_dashboard.py  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
.github/workflows/: ci.yml  monthly-ingest.yml  weekly-ingest.yml
apps/api/: Dockerfile  openapi.json  pyproject.toml
apps/api/scripts/: dump_openapi.py
apps/api/src/bayre_api/: __init__.py  config.py  db.py  main.py
apps/api/src/bayre_api/models/: __init__.py  attendance_zone.py  base.py  data_source.py  geographic_area.py  listing.py  market_signal.py  market_snapshot.py  parcel.py  sale.py  school.py  school_district.py  source_fetch.py
apps/api/src/bayre_api/routers/: __init__.py  areas.py  finance.py  status.py
apps/api/src/bayre_api/schemas/: __init__.py  areas.py  finance.py  status.py
apps/api/tests/: test_smoke.py
apps/web/: .browserslistrc  .eslintrc.json  .gitignore  README.md  next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
apps/web/scripts/: check-shadcn-overrides.sh
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(metro)/[metro]/: layout.tsx  page.tsx
apps/web/src/app/(metro)/[metro]/cities/[slug]/: page.tsx
apps/web/src/app/(metro)/[metro]/schools/: page.tsx
apps/web/src/app/(metro)/[metro]/schools/[slug]/: page.tsx
apps/web/src/app/(metro)/[metro]/timing/: page.tsx
apps/web/src/app/status/: page.tsx
apps/web/src/components/ui/: Breadcrumb.tsx  Chart.tsx  CommandPalette.tsx  DataNotice.tsx  DisclaimerNote.tsx  EducationTooltip.tsx  FreshnessBadge.tsx  MetricCell.tsx  Tappable.tsx
apps/web/src/lib/: areas.ts  db.ts  finance.ts  utils.ts
apps/web/src/lib/api/: client.ts
data/: 2026-05-12.json  sources.json
data/bronze/redfin/2026-04/: campbell.tsv  dublin.tsv  fremont.tsv  milpitas.tsv  mountain-view.tsv  pleasanton.tsv  sunnyvale.tsv
docs/: contracts.md  datamodel.md  design.md  implementation-plan.md  requirements.md  seed-data.md  ux-review.md
docs/adr/: 0001-monorepo-foundation.md
docs/glossary/: conforming-limit.md  dti.md  jumbo.md  mello-roos.md  pmi.md  prop-13-base-year.md  prop-13.md  salt.md
docs/runbooks/: redfin-csv-source.md
infra/migrations/: README.md  alembic.ini  env.py  script.py.mako  verify_seed.py
infra/migrations/versions/: 0001_initial_schema.py  0002_seed_geographic_areas.py
legacy/: README.md  scrape.py
status/: index.html
