[project]
name = "bayre-workspace"
version = "0.0.0"
description = "Bay Area first-time-home-buyer decision-support tool"
requires-python = ">=3.12"

# Workspace root has no runtime deps — packages declare their own.
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "apps/api"]

[tool.uv]
dev-dependencies = [
    # Test
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "responses>=0.25",
    # Lint / type
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[tool.uv.sources]
# Local workspace packages — listed once here so any package can depend on any other.
bayre-domain = { workspace = true }
bayre-finance = { workspace = true }
bayre-adapters = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
ignore = ["E501"]  # let formatter handle line length

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
exclude = ["legacy", "**/.venv", "**/node_modules"]

[tool.pytest.ini_options]
testpaths = ["packages", "apps/api"]
addopts = "-ra --strict-markers"
markers = [
    "integration: hits real network or DB (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["packages"]
omit = ["**/_ts_export/*", "**/tests/*", "legacy/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
