[project]
name = "bayre-workspace"
version = "0.0.0"
description = "Bay Area first-time-home-buyer decision-support tool"
requires-python = ">=3.12"

# Workspace root has no runtime deps — packages declare their own.
dependencies = []

[tool.uv.workspace]
members = ["packages/*", "apps/api"]

[dependency-groups]
dev = [
    # Test
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "hypothesis>=6.100",
    "responses>=0.25",
    "httpx>=0.27",  # FastAPI TestClient
    # Lint / type
    "ruff>=0.6",
    "pyright>=1.1.380",
]

[tool.uv.sources]
# Local workspace packages — listed once here so any package can depend on any other.
bayre-domain = { workspace = true }
bayre-finance = { workspace = true }
bayre-adapters = { workspace = true }

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "RUF"]
ignore = [
    "E501",   # line length — let formatter handle
    "RUF001", # Unicode in strings — we use proper typography (en/em dashes)
    "RUF002", # Unicode in docstrings — same reason
    "RUF003", # Unicode in comments — same reason
    "B008",   # function-call-in-default — FastAPI's Depends() pattern
]

[tool.pyright]
pythonVersion = "3.12"
# Standard mode globally; strict on the finance trust layer via per-dir override.
typeCheckingMode = "standard"
reportMissingTypeStubs = false
exclude = [
    "legacy",
    "**/.venv",
    "**/node_modules",
    # Stdlib-only dev coverage probe; mocks pytest internals — pyright noise.
    "packages/finance/tests/_run_coverage.py",
]

# Strict on `packages/finance/*.py` (the trust layer per docs/design.md §5).
# Tests stay at standard so Hypothesis decorators don't flood.
strict = [
    "packages/finance/affordability.py",
    "packages/finance/timing.py",
    "packages/finance/cost_of_waiting.py",
    "packages/finance/confidence.py",
    "packages/finance/tax_rules.py",
    "packages/finance/phase_weights.py",
    "packages/finance/_types.py",
]

[tool.pytest.ini_options]
testpaths = ["packages", "apps/api"]
addopts = "-ra --strict-markers"
markers = [
    "integration: hits real network or DB (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["packages"]
omit = ["**/_ts_export/*", "**/tests/*", "legacy/*"]

[tool.coverage.report]
fail_under = 95
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
