[project]
name = "bayre-api"
version = "0.0.0"
description = "FastAPI backend for the Bay Area FTHB tool. Phase 2 scaffold."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "geoalchemy2>=0.15",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.4",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bayre_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
